--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="app">
         <h1>Simple Quiz</h1>
         <div class="quiz">
-            <h2 id="question">Question goes Now</h2>
+            <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
