--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
         <div class="quiz">
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
+                <button class="btn"></button>
             </div>
-            <button id="next-btn">Next</button>
+            <button id="next-btn">Next <img src="/images/next.png" alt="" id="nx"></button>
         </div>
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
