--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="btn"></button>
                 <button class="btn"></button>
             </div>
-            <button id="next-btn">Next <img src="/images/next.png" alt="" id="nx"></button>
+            <button id="next-btn">Next</button>
         </div>
     </div>
 
